# ProfessorRobot

./: .gitignore
professor_robot/: professor_robot.db  pyproject.toml
professor_robot/src/professor_robot/: main.py
professor_robot/src/professor_robot/core/: database.py
professor_robot/src/professor_robot/models/: __init__.py
professor_robot/src/professor_robot/models/usuario/: aluno.py  professor.py  usuario.py
professor_robot/src/professor_robot/routers/: aluno_routers.py  professor_routers.py  usuario_routers.py
professor_robot/src/professor_robot/schemas/usuario/: aluno_schema.py  professor_schema.py  usuario_schema.py
professor_robot/tests/: test_main.py  test_professor_router.py
