[project]
name = "professor-robot"
version = "0.1.0"
description = ""
authors = [
    {name = "Arth26",email = "arthuralves@ads.fiponline.edu.br"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.2,<0.117.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)"
]

[tool.poetry]
packages = [{include = "professor_robot", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev src/professor_robot/main.py'
fix = 'ruff check . --fix'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
